          TODO: processMidi could do stuck notes better by bypassing their insertion in the play event list,
                 also applies to seek/stop handler block, but I'm not sure about the time comparisons.   
        - Removed MidiSeq::msgSeek and ::msgStop, and removed calls from Audio::seek and ::stopRolling. (Tim) 
        - Some more separation of ALSA and Jack Midi, one step closer to configurable choice of either/or. (Tim)
        - Massive cleanup of audio, midi, mididev, alsamidi, jackmidi, dssi modules. Moved some stuff from 
           Audio::processMidi into MidiDevice. (Tim)
        - Test OK here so far, with stress files and complete pre-existing songs, ALSA, Jack, and Synth midi. (Tim)
          TODO: Restoration of sustain upon play seems broken for a while - try putEvent instead of addScheduledEvent
           in Audio::startRolling().
08.09.2011:
        - Finished namespace MusEWidget. Added namespaces MusEUtil, MusEDialog. (Orcan)
07.09.2011:
        - Introducing namespaces. So far, we have MusEApp, MusEGlobal, MusEConfig, and I just started
          MusEWidget. zynaddsubfx does not crash anymore. (Orcan)
06.09.2011:
        - Add licensing information (GPLv2 or later) to source code files. Update FSF mailing address
          to the most recent one in the existing copyright notices. (Orcan)
05.09.2011:
        - Remodel the EffectRack. There is still an ongoing issue with the minimumSizeHint, which I worked
          around by adding a fixed offset. (Orcan)
        - Fall back to using Meter's own size functions rather than the event rectangle's size functions
	  in paintEvent(). The latter caused corruption when toggling mono/stereo. (Orcan)
04.09.2011:
        - Remodel the Slider (Orcan)
01.09.2011:
        - Fixed tough old skeleton: Selecting 'previous/next event' in Song::execAutomationCtlPopup now moves cursor
           with exact frame resolution, all the way through via proper song->setPos > audio->msgSeek rather than